# spa_on_esp32

./: CMakeLists.txt  README.md  partitions_example.csv  platformio.ini  sdkconfig.esp32dev  sdkconfig.esp32dev.old
data/: asset-manifest.json  index.html
data/js/: 787.c0ad198c.chunk.js  787.c0ad198c.chunk.js.map  main.008c0336.js  main.008c0336.js.map  main.cd42df0b.js
src/: CMakeLists.txt  Kconfig.projbuild  access_point.c  access_point.h  idf_component.yml  main.c  rest_server.c
web/web/: package-lock.json  package.json
